--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.0.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
