--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "apexcharts": "^3.45.1",
+    "crypto-js": "^4.2.0",
     "flowbite": "^2.1.1",
     "ngx-cookie": "^6.0.1",
     "rxjs": "~7.8.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.0.7",
